--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ fastapi==0.73.0
 uvicorn[standard]==0.17.4
 tweepy==4.6.0
 python-dotenv==0.19.2
+httpx==0.22.0
+beautifulsoup4==4.10.0
+requests==2.27.1
