--- a/app.json
+++ b/app.json
@@ -30,9 +30,9 @@
       }
   ],
   "formation": {
-      "worker": {
-          "quantity": 1,
-          "size": "free"
-      }
+    "web": {
+      "quantity": 1,
+      "size": "free"
+    }
   }
 }
